--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -233,7 +233,7 @@
                <item row="2" column="1">
                 <widget class="QLineEdit" name="name">
                  <property name="text">
-                  <string>Unnamed segment</string>
+                  <string/>
                  </property>
                 </widget>
                </item>
