--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -272,7 +272,7 @@
             </property>
             <layout class="QHBoxLayout" name="horizontalLayout_8">
              <item>
-              <widget class="QPlainTextEdit" name="plainTextEdit_3">
+              <widget class="QPlainTextEdit" name="backlog">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Expanding" vsizetype="Maximum">
                  <horstretch>0</horstretch>
